--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,16 +1,14 @@
 {
+  "projectName": "Qvapay Python",
+  "projectOwner": "lugodev",
+  "repoType": "github",
+  "repoHost": "https://github.com",
   "files": [
     "README.md"
   ],
   "imageSize": 100,
-  "contributorsPerLine": 7,
-  "contributorsSortAlphabetically": false,
-  "badgeTemplate": "[![All Contributors](https://img.shields.io/badge/all_contributors-<%= contributors.length %>-orange.svg?style=flat-square)](#contributors)",
-  "contributorTemplate": "<a href=\"<%= contributor.profile %>\"><img src=\"<%= contributor.avatar_url %>\" width=\"<%= options.imageSize %>px;\" alt=\"\"/><br /><sub><b><%= contributor.name %></b></sub></a>",
-  "skipCi": true,
+  "commit": true,
+  "commitConvention": "gitmoji",
   "contributors": [],
-  "projectName": "qvapay-python",
-  "projectOwner": "lugodev",
-  "repoType": "github",
-  "repoHost": "https://github.com/lugodev/qvapay-python"
+  "contributorsPerLine": 7
 }
