--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-requests = "^2.26.0"
+httpx = "0.19.0"
 
 [tool.poetry.dev-dependencies]
 
