:busts_in_silhouette: Add @codeshard as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -18,6 +18,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "codeshard",
+      "name": "Ozkar L. Garcell",
+      "avatar_url": "https://avatars.githubusercontent.com/u/5880754?v=4",
+      "profile": "http://codeshard.github.io/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
