--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.8"
 httpx = {extras = ["brotli"], version = "^0.19.0"}
-pydantic = {extras = ["dotenv"], version = "^1.8.2"}
+python-dateutil = "^2.8.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
