--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ classifiers = [
 python = "^3.8"
 httpx = {extras = ["brotli"], version = "^0.19.0"}
 python-dateutil = "^2.8.2"
+python-dotenv = "^0.19.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
