:busts_in_silhouette: Add @leynier as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -27,6 +27,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "leynier",
+      "name": "Leynier Gutiérrez González",
+      "avatar_url": "https://avatars.githubusercontent.com/u/36774373?v=4",
+      "profile": "https://github.com/leynier",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
