--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,12 @@
 [tool.poetry]
 name = "qvapay"
-version = "0.0.3"
+version = "0.0.4"
 description = "Python SDK for the QvaPay API"
-authors = ["Carlos Lugones <contact@lugodev.com>"]
+authors = [
+    "Carlos Lugones <contact@lugodev.com>",
+    "Ozkar L. Garcell <ozkar.garcell@gmail.com>",
+    "Leynier Gutiérrez González <leynier41@gmail.com>"
+]
 homepage = "https://github.com/lugodev/qvapay-python"
 repository = "https://github.com/lugodev/qvapay-python"
 documentation = "https://github.com/lugodev/qvapay-python"
