--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ black = "^21.8b0"
 isort = "^5.9.3"
 pytest-cov = "^2.12.1"
 pytest-asyncio = "^0.15.1"
+commitizen = "^2.18.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
