--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,17 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Set up Poetry 2.1.0
-      uses: abatilo/actions-poetry@v2.1.0
+    - name: Install Poetry
+      uses: snok/install-poetry@v1.1.7
       with:
-        poetry-version: 1.1.2
+        virtualenvs-create: true
+        virtualenvs-in-project: true
+    - name: Load cached venv
+      id: cached-poetry-dependencies
+      uses: actions/cache@v2
+      with:
+        path: .venv
+        key: venv-${{ runner.os }}-${{ hashFiles('**/pyproject.toml') }}
     - name: Run tests
       env:
           QVAPAY_APP_ID: ${{ secrets.QVAPAY_APP_ID }}
