--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,17 +12,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Install Poetry
-      uses: snok/install-poetry@v1.1.7
+    - name: Set up Poetry 2.1.0
+      uses: abatilo/actions-poetry@v2.1.0
       with:
-        virtualenvs-create: true
-        virtualenvs-in-project: true
-    - name: Load cached venv
-      id: cached-poetry-dependencies
-      uses: actions/cache@v2
-      with:
-        path: .venv
-        key: venv-${{ runner.os }}-${{ hashFiles('**/pyproject.toml') }}
+        poetry-version: 1.1.2
     - name: Run tests
       env:
           QVAPAY_APP_ID: ${{ secrets.QVAPAY_APP_ID }}
