--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,8 @@ flake8 = "^4.0.1"
 black = "^21.9b0"
 isort = "^5.9.3"
 pytest-cov = "^3.0.0"
-pytest-asyncio = "^0.16.0"
 commitizen = "^2.20.0"
+anyio = {extras = ["trio"], version = "^3.3.4"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
